# cookiecutter-python-data

./: LICENSE  README.md  cookiecutter.json  environment.yml
examples/: .bashrc  profile.ps1
hooks/: post_gen_project.py
{{ cookiecutter.package_name }}/: .gitignore  LICENSE  README.md  environment.yml  makefile  pyproject.toml
{{ cookiecutter.package_name }}/docs/: README.md  mkdocs.yml
{{ cookiecutter.package_name }}/docs/docs/: 1-getting_started.md  index.md
{{ cookiecutter.package_name }}/docs/docs/javascripts/: mathjax.js
{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/: config.py  dataset.py  plots.py
