[build-system]

requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.__ymd.replace(".0", ".") }}"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}"},
]{% if cookiecutter.open_source_license != "No license file" %}
license = { file = "LICENSE"}{% endif %}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", # Ruff defaults
    "W",                   # Whitespace
    "N",                   # Naming
    "A",                   # Overshadowing builtins
    "ISC",                 # Implicit string concatenation
    "PTH",                 # Suggest pathlib instead of os
    "PD",                  # Pandas best practices
    "D"                    # Require docstrings
]
ignore = ["PD901"] # df variable is justified in general functions

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.package_name }}"]
force-sort-within-sections = true
