[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}"},
]{% if cookiecutter.open_source_license != "No license file" %}
license = { file = "LICENSE"}{% endif %}
readme = "README.md"
requires-python = ">=3.13, <4"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "W",                   # Whitespace
    "N",                   # Naming
    "A",                   # Overshadowing builtins
    "ISC",                 # Implicit string concatenation
    "PTH",                 # Require pathlib instead of os
    "D"                    # Require docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.package_name }}"]
force-sort-within-sections = true

[tool.pyright]
typeCheckingMode = "standard"
include = ["src"]
ignore = ["\\Interactive-*.interactive.py"]
reportMissingParameterType = true